Added dependencies for face-recognition

--- a/portal_attendance_artx/views/hr_attendance_correction_views.xml
+++ b/portal_attendance_artx/views/hr_attendance_correction_views.xml
@@ -5,7 +5,7 @@
     <record id="view_hr_attendance_correction_tree" model="ir.ui.view">
         <field name="name">hr.attendance.correction.tree</field>
         <field name="model">hr.attendance.correction</field>
-        <field name="type">tree</field>  <!-- Ensure this line is correct -->
+        <field name="type">tree</field>  <!-- ✅ Ensure this is correctly set -->
         <field name="arch" type="xml">
             <tree string="Attendance Correction Requests">
                 <field name="employee_id"/>
@@ -67,3 +67,68 @@
         action="action_hr_attendance_correction"/>
 
 </odoo>
+<!-- <?xml version="1.0" encoding="utf-8"?>
+<odoo>
+
+    <record id="view_hr_attendance_correction_tree" model="ir.ui.view">
+        <field name="name">hr.attendance.correction.tree</field>
+        <field name="model">hr.attendance.correction</field>
+        <field name="type">tree</field>  
+        <field name="arch" type="xml">
+            <tree string="Attendance Correction Requests">
+                <field name="employee_id"/>
+                <field name="original_check_in"/>
+                <field name="original_check_out"/>
+                <field name="corrected_check_in"/>
+                <field name="corrected_check_out"/>
+                <field name="reason"/>
+                <field name="state"/>
+                <field name="create_uid" string="Requested By"/>
+                <field name="create_date" string="Request Date"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_hr_attendance_correction_form" model="ir.ui.view">
+        <field name="name">hr.attendance.correction.form</field>
+        <field name="model">hr.attendance.correction</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Attendance Correction Request">
+                <sheet>
+                    <header>
+                        <button name="action_submit" type="object" string="Submit" class="oe_highlight"/>
+                        <button name="action_approve" type="object" string="Approve" class="btn-primary"/>
+                        <button name="action_reject" type="object" string="Reject" class="btn-danger"/>
+                        <field name="state" widget="statusbar" readonly="1"/>
+                    </header>
+                    <group>
+                        <field name="employee_id"/>
+                        <field name="attendance_id"/>
+                        <field name="original_check_in"/>
+                        <field name="original_check_out"/>
+                        <field name="corrected_check_in"/>
+                        <field name="corrected_check_out"/>
+                        <field name="reason"/>
+                        <field name="state" readonly="1"/>
+                    </group>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_hr_attendance_correction" model="ir.actions.act_window">
+        <field name="name">Attendance Correction Requests</field>
+        <field name="res_model">hr.attendance.correction</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem id="menu_hr_attendance_correction" name="Attendance Correction Requests"
+        parent="hr_attendance.menu_hr_attendance_root"
+        action="action_hr_attendance_correction"/>
+
+</odoo> -->
