Added dependencies for face-recognition

--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -16,49 +16,7 @@
             </xpath>
         </template>
         
-        <template id="portal_attendance_js" name="Portal Attendance JS">
-            <script>
-                function handleAttendance() {
-                    fetch('/portal/add_attendance', {
-                        method: 'POST',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({})
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            document.getElementById("attendanceBtn").classList.add("d-none");
-                            document.getElementById("checkoutBtn").classList.remove("d-none");
-                            alert("تم تسجيل الدخول بنجاح!");
-                        } else {
-                            alert(data.message || "حدث خطأ أثناء تسجيل الدخول.");
-                        }
-                    })
-                    .catch(error => console.error("Error:", error));
-                }
-
-                function handleCheckout() {
-                    fetch('/portal/check_out', {
-                        method: 'POST',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({})
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            document.getElementById("attendanceBtn").classList.remove("d-none");
-                            document.getElementById("checkoutBtn").classList.add("d-none");
-                            alert("تم تسجيل الخروج بنجاح!");
-                        } else {
-                            alert(data.message || "حدث خطأ أثناء تسجيل الخروج.");
-                        }
-                    })
-                    .catch(error => console.error("Error:", error));
-                }
-            </script>
-        </template>
-
-        <!-- <template id="portal_my_home_sale" name="Show Quotations / Sales Orders" customize_show="True"
+        <template id="portal_my_home_sale" name="Show Quotations / Sales Orders" customize_show="True"
                   inherit_id="portal.portal_my_home" priority="20">
             <div class="oe_structure" position="inside">
                 <div class="container">
@@ -68,7 +26,8 @@
                     </button>
                 </div>
             </div>
-        </template> -->
+        </template>
+
         <record id="action_hr_employee_create_portal_user" model="ir.actions.server">
             <field name="name">Create Portal User</field>
             <field name="model_id" ref="hr.model_hr_employee"/>
