--- a/ent_ohrms_loan/views/hr_loan_views.xml
+++ b/ent_ohrms_loan/views/hr_loan_views.xml
@@ -4,6 +4,7 @@
     <record id="hr_loan_view_tree" model="ir.ui.view">
         <field name="name">hr.loan.view.tree</field>
         <field name="model">hr.loan</field>
+        <field name="type">tree</field>  
         <field name="arch" type="xml">
             <tree string="Loan Requests">
                 <field name="name"/>
