--- a/ent_ohrms_loan/views/hr_loan_views.xml
+++ b/ent_ohrms_loan/views/hr_loan_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!--Loan Tree view-->
-    <record id="hr_loan_view_tree" model="ir.ui.view">
+    <!-- <record id="hr_loan_view_tree" model="ir.ui.view">
         <field name="name">hr.loan.view.tree</field>
         <field name="model">hr.loan</field>
         <field name="type">tree</field>  
@@ -13,8 +13,9 @@
                 <field name="date"/>
                 <field name="state"/>
             </tree>
-        </field>
-    </record>
+        </field> 
+    </record> -->
+
     <!--Loan Form view-->
     <record id="hr_loan_view_form" model="ir.ui.view">
         <field name="name">hr.loan.view.form</field>
