--- a/ent_ohrms_loan/views/hr_payslip_views.xml
+++ b/ent_ohrms_loan/views/hr_payslip_views.xml
@@ -6,7 +6,9 @@
         <field name="model">hr.payslip</field>
         <field name="inherit_id" ref="hr_payroll.view_hr_payslip_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='input_line_ids']//tree//field[@name='sequence']" position="after">
+            <!-- <xpath expr="//field[@name='input_line_ids']//tree//field[@name='sequence']" position="after"> -->
+            <xpath expr="//field[@name='input_line_ids']//list//field[@name='sequence']" position="after">
+
                 <field name="loan_line_id" invisible="1"/>
             </xpath>
         </field>
