--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -442,13 +442,13 @@
                                     <!-- Start Date -->
                                     <div class="mb-3">
                                         <label for="start_date" class="form-label fw-bold">تاريخ البدء</label>
-                                        <input type="date" id="start_date" name="start_date" class="form-control" required />
+                                        <input type="date" id="start_date" name="start_date" class="form-control" required="true" />
                                     </div>
 
                                     <!-- End Date -->
                                     <div class="mb-3">
                                         <label for="end_date" class="form-label fw-bold">تاريخ الانتهاء</label>
-                                        <input type="date" id="end_date" name="end_date" class="form-control" required />
+                                        <input type="date" id="end_date" name="end_date" class="form-control" required="true" />
                                     </div>
 
                                     <!-- Error Message -->
