--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -477,7 +477,9 @@
                 var errorMessage = document.getElementById('error-message');
 
                 // Validate date fields
-                if (startDate && endDate && new Date(startDate) > new Date(endDate)) {
+                <!-- if (startDate && endDate && new Date(startDate) > new Date(endDate)) { -->
+                if (startDate &amp;&amp; endDate &amp;&amp; new Date(startDate) > new Date(endDate)) {
+
                     event.preventDefault();
                     errorMessage.innerText = "يجب أن يكون تاريخ البدء قبل تاريخ الانتهاء.";
                     errorMessage.style.display = "block";
