--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -370,13 +370,18 @@
                 </div>
             </xpath>
         </template>
-<template id="leave_form_template" name="Leave Form" t-name="portal_attendance_artx.leave_form_template">
-    <t t-call="portal.portal_layout">
-        <section class="leave-form-section py-4">
+
+
+
+
+      <!-- Template Form to create new Loan -->
+      <template id="leave_form_template" name="Create Leave">
+         <t t-call="portal.portal_layout">
             <div class="container">
                 <h3>طلب إجازة</h3>
-                <form action="/my/leave/submit" method="POST" id="leaveRequestForm">
-                    <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+               <form t-attf-action="/my/leave/submit" method="post"  id="leaveRequestForm">
+                  <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                  
                     <div class="mb-3">
                         <label for="leave_type" class="form-label">نوع الإجازة</label>
                         <select id="leave_type" name="leave_type" class="form-select" required="true">
@@ -395,12 +400,11 @@
                         <label for="end_date" class="form-label">تاريخ الانتهاء</label>
                         <input type="date" id="end_date" name="end_date" class="form-control" required="true" />
                     </div>
-                    <button type="submit" class="btn btn-success">إرسال الطلب</button>
-                </form>
+                  <button type="submit" class="btn btn-primary">تقديم الطلب</button>
+               </form>
             </div>
-        </section>
-    </t>
-</template>
+         </t>
+      </template>
 
 
         <template id="portal_my_leaves" name="Portal Leave List">
@@ -448,7 +452,7 @@
                 </div>
             </t>
         </template>
-
+<!-- 
         <template id="leave_form_template" name="Leave Form">
             <t t-call="portal.portal_layout">
                 <section class="leave-form-section py-4">
@@ -522,7 +526,7 @@
                     });
                 </script>
             </t>
-        </template>
+        </template> -->
 
 
 <!--                         if (startDate && endDate && new Date(startDate) > new Date(endDate)) {  -->
