--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -371,10 +371,7 @@
             </xpath>
         </template>
 
-
-
-
-      <!-- Template Form to create new Loan -->
+      <!-- Template Form to create new Leave -->
       <template id="leave_form_template" name="Create Leave">
          <t t-call="portal.portal_layout">
             <div class="container">
