--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -155,14 +155,14 @@
                     <a class="list-group-item list-group-item-action d-flex align-items-center justify-content-between"
                         href="/my/attendance" title="Attendance">
                         <img width="100px" src="/portal_attendance_artx/static/src/images/attendance-icon.svg" loading="lazy"/>
-                        <!-- الحضور -->
+                        الحضور
                         <span class="badge text-bg-secondary rounded-pill">
-                        <!-- <i class="fa fa-sign-in"></i> -->
+                        <i class="fa fa-sign-in"></i>
                         </span>
-                        <div>
+                        <!-- <div>
                             <h5 class="mt-0 mb-1"> سجلات الحضور </h5>
-                            <!-- <p class="m-0 text-600">  تتبع الحضور و الانصراف و التاخير و الخصومات من هنا   </p> -->
-                        </div>
+                            <p class="m-0 text-600">  تتبع الحضور و الانصراف و التاخير و الخصومات من هنا   </p>
+                        </div> -->
                     </a>
                 </div>
             </xpath>
