--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -372,7 +372,7 @@
         </template>
 
       <!-- Template Form to create new Leave -->
-      <template id="leave_form_template2" name="Create Leave">
+      <template id="leave_form_template" name="Create Leave">
          <t t-call="portal.portal_layout">
             <div class="container">
                 <h3>طلب إجازة</h3>
